# dswav

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: ci.yaml
dswav/: __main__.py  config.py  ds.py  sentence.py  styletts2.py  utils.py
projects/: .gitignore
projects/example/: audio.json  sentences.json
projects/example/ds/: metadata.csv  train_list.txt  val_list.txt
scripts/: mp3-to-wav.sh
