[tool.poetry]
name = "dswav"
version = "0.1.0"
description = ""
authors = ["David Wolf <68775926+devidw@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
gradio = "^4.4.1"
setuptools = "^68.2.2"
phonemizer = "^3.2.1"
nltk = "^3.8.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
